<resources>
    <string name="app_name">BillBase</string>
    <string name="get_info">GET INFO</string>
    <string name="update_info">UPDATE INFO</string>
    <string name="new_entry">NEW ENTRY</string>
    <string name="rent_fee">Rent Fee</string>
    <string name="gas_bill">Gas Bill</string>
    <string name="per_unit_cost">This Month Unit</string>
    <string name="flat_no">Flat No.</string>
    <string name="submit">Submit</string>
    <string name="get">Get</string>
    <string name="select">SELECT</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="reset">RESET</string>
    <string name="get_individual_flat_info">GET INDIVIDUAL FLAT INFO</string>
    <string name="get_info_of_all_flat">GET INFO OF ALL FLAT</string>
</resources>
