<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_newEntry_flatNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/flat_no"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText_newEntry_rentFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/rent_fee"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText_newEntry_perUnitCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="Meter Reading"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button_new_entry_reset"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_new_entry_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-210dp"
        android:onClick="onClickReset"
        android:text="@string/reset" />

    <Button
        android:id="@+id/button_new_entry_submit"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:onClick="onClickSubmit"
        android:text="@string/submit" />

</RelativeLayout>